crates/lowering_v1/tests/snapshots/concrete__lower_type_constructor.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeConstructor,
                range: 24..30,
            },
        }: Constructor {
            qualifier: Some(
                "Id.",
            ),
            name: Some(
                "Id",
            ),
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
