crates/lowering_v1/tests/snapshots/concrete__lower_type_operator.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeOperator,
                range: 24..31,
            },
        }: Operator {
            qualifier: Some(
                "Id.",
            ),
            name: Some(
                "(+)",
            ),
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
