crates/lowering_v1/tests/snapshots/concrete__lower_type_operator_chain.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeInteger,
                range: 24..26,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeInteger,
                range: 28..30,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeInteger,
                range: 32..34,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeOperatorChain,
                range: 24..34,
            },
        }: OperatorChain {
            head: Some(
                Id<syntax::cst::Type>(0),
            ),
            tail: [
                OperatorPair {
                    qualifier: None,
                    operator: Some(
                        "+",
                    ),
                    element: Some(
                        Id<syntax::cst::Type>(1),
                    ),
                },
                OperatorPair {
                    qualifier: None,
                    operator: Some(
                        "+",
                    ),
                    element: Some(
                        Id<syntax::cst::Type>(2),
                    ),
                },
            ],
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
