crates/lowering_v1/tests/snapshots/concrete__lower_type_record.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeConstructor,
                range: 31..35,
            },
        }: Constructor {
            qualifier: None,
            name: Some(
                "Int",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeVariable,
                range: 37..39,
            },
        }: Variable {
            name: Some(
                "b",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeRecord,
                range: 24..41,
            },
        }: Record {
            items: [
                TypeRowItem {
                    name: Some(
                        "a",
                    ),
                    type: Some(
                        Id<syntax::cst::Type>(0),
                    ),
                },
            ],
            tail: Some(
                Id<syntax::cst::Type>(1),
            ),
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
